--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="5.7.3" />
   <package id="ExcelDataReader" version="3.6.0" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" />
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" />
   <package id="NETStandard.Library" version="1.6.1" />
   <package id="System.Buffers" version="4.5.1" />
