--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\AugmentUI.cs" />
     <Compile Include="Assets\Scripts\DecisionTree\Decision.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSpline2d.cs" />
+    <Compile Include="Assets\Map.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
     <Compile Include="Assets\Scripts\SynergyHUD.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Assets\LeanTween\Framework\LeanSmooth.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSplinePerformance.cs" />
     <Compile Include="Assets\Scripts\Aguments\BouncingBullet.cs" />
+    <Compile Include="Assets\AmmoUI.cs" />
     <Compile Include="Assets\Scripts\Character\SpellQueueEnemy.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTest.cs" />
     <Compile Include="Assets\Scripts\ParticleHandler.cs" />
@@ -208,8 +210,8 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
-    <Compile Include="Assets\Map.cs" />
-    <Compile Include="Assets\AmmoUI.cs" />
+    <Compile Include="Assets\Scripts\Aguments\ShrapnelShotAugment.cs" />
+    <Compile Include="Assets\Scripts\Ammos\Shrapnel.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
