--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
+    <Compile Include="Assets\Scripts\BossEncounter.cs" />
+    <Compile Include="Assets\Scripts\Character\BossEnemy.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
@@ -527,6 +529,9 @@
     <Reference Include="Unity.Searcher.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="FMODUnityResonanceEditor">
+      <HintPath>Library\ScriptAssemblies\FMODUnityResonanceEditor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
     </Reference>
@@ -554,14 +559,11 @@
     <Reference Include="Unity.Mathematics.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="FMODUnityResonanceEditor">
-      <HintPath>Library\ScriptAssemblies\FMODUnityResonanceEditor.dll</HintPath>
-    </Reference>
     <Reference Include="FMODUnityEditor">
       <HintPath>Library\ScriptAssemblies\FMODUnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="EPPlus">
       <HintPath>Assets\Packages\EPPlus.5.7.3\lib\net45\EPPlus.dll</HintPath>
@@ -972,6 +974,14 @@
       <Project>{33499D3C-6ADA-CE1E-8E38-42230C9450A6}</Project>
       <Name>Unity.ProBuilder</Name>
     </ProjectReference>
+    <ProjectReference Include="FMODUnity.csproj">
+      <Project>{ABE2FF18-F7AA-D99C-1840-FE756A589A81}</Project>
+      <Name>FMODUnity</Name>
+    </ProjectReference>
+    <ProjectReference Include="FMODUnityResonance.csproj">
+      <Project>{AA53C4C7-B92C-8D03-C8C0-84AB44880979}</Project>
+      <Name>FMODUnityResonance</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.RenderPipelines.Core.Runtime.csproj">
       <Project>{BBD5A8CA-6D23-CC08-D32C-1B94683A1B2F}</Project>
       <Name>Unity.RenderPipelines.Core.Runtime</Name>
@@ -1015,14 +1025,6 @@
     <ProjectReference Include="Unity.TextMeshPro.csproj">
       <Project>{6A118FE5-CECA-284A-2633-7A1F462B017E}</Project>
       <Name>Unity.TextMeshPro</Name>
-    </ProjectReference>
-    <ProjectReference Include="FMODUnity.csproj">
-      <Project>{ABE2FF18-F7AA-D99C-1840-FE756A589A81}</Project>
-      <Name>FMODUnity</Name>
-    </ProjectReference>
-    <ProjectReference Include="FMODUnityResonance.csproj">
-      <Project>{AA53C4C7-B92C-8D03-C8C0-84AB44880979}</Project>
-      <Name>FMODUnityResonance</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
