--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Assets\Scripts\Aguments\Augment.cs" />
     <Compile Include="Assets\DoorController.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
+    <Compile Include="Assets\Scripts\Aguments\_old\SynergyDataOld.cs" />
     <Compile Include="Assets\Scripts\GameData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\ExplosionParticle.cs" />
@@ -166,6 +167,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextConsoleSimulator.cs" />
     <Compile Include="Assets\Scripts\Aguments\MirrorBullet\MirrorBullet.cs" />
+    <Compile Include="Assets\Scripts\Aguments\UnstableExplosionDevice\UnstableExplosionDevice_data.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\Scripts\Ammos\Ammo.cs" />
@@ -184,12 +186,14 @@
     <Compile Include="Assets\CircleMesh.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
+    <Compile Include="Assets\Scripts\Aguments\UnstableExplosionDevice\UnstableExplosionDevice.cs" />
     <Compile Include="Assets\Scripts\Ammos\GenericBullet.cs" />
     <Compile Include="Assets\CursorController.cs" />
     <Compile Include="Assets\Scripts\Aguments\StandardBullet\MultiBulletData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
     <Compile Include="Assets\Scripts\BoxColliderDebug.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SynergyData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\Scripts\Ammos\EnemyLaser.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
@@ -230,10 +234,9 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
-    <Compile Include="Assets\Scripts\Aguments\_old\SynergyDataOld.cs" />
-    <Compile Include="Assets\Scripts\Synergies\SynergyData.cs" />
-    <Compile Include="Assets\Scripts\Aguments\UnstableExplosionDevice\UnstableExplosionDevice_data.cs" />
-    <Compile Include="Assets\Scripts\Aguments\UnstableExplosionDevice\UnstableExplosionDevice.cs" />
+    <Compile Include="Assets\Scripts\Synergies\Synergy.cs" />
+    <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergy.cs" />
+    <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergyData.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
