--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Assets\Scripts\Synergies\Synergy.cs" />
     <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergy.cs" />
     <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergyData.cs" />
+    <Compile Include="Assets\Scripts\HighScoreDisplay.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
