Added wip land mine Added wip circuit seeker

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -238,10 +238,8 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
-    <Compile Include="Assets\Scripts\Synergies\Synergy.cs" />
-    <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergy.cs" />
-    <Compile Include="Assets\Scripts\Synergies\ExplosiveSynergyData.cs" />
-    <Compile Include="Assets\Scripts\HighScoreDisplay.cs" />
+    <Compile Include="Assets\Scripts\Aguments\Circuit Seeker\CircuitSeeker.cs" />
+    <Compile Include="Assets\Scripts\Aguments\Circuit Seeker\CircuitSeeker_Data.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
