--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Assets\Scripts\Ammos\Shrapnel.cs" />
     <Compile Include="Assets\Scripts\Character\SpellQueueTank.cs" />
     <Compile Include="Assets\Scripts\AugmentUI.cs" />
+    <Compile Include="Assets\Scripts\Aguments\Circuit Seeker\CircuitSeeker.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SniperSynergyData.cs" />
     <Compile Include="Assets\Scripts\DecisionTree\Decision.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSpline2d.cs" />
     <Compile Include="Assets\Map.cs" />
@@ -162,6 +164,7 @@
     <Compile Include="Assets\LeanTween\Examples\Scripts\TestingZLegacy.cs" />
     <Compile Include="Assets\Scripts\Parser\Eva.cs" />
     <Compile Include="Assets\Scripts\GameEvent.cs" />
+    <Compile Include="Assets\Scripts\Aguments\Circuit Seeker\CircuitSeeker_Data.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
     <Compile Include="Assets\Scripts\Character\Character.cs" />
     <Compile Include="Assets\Scripts\Ammos\Laser.cs" />
@@ -221,6 +224,7 @@
     <Compile Include="Assets\LeanTween\Framework\LTDescrOptional.cs" />
     <Compile Include="Assets\Scripts\HealthBar.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SniperSynergy.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\Scripts\Shop.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
@@ -238,6 +242,8 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SpreadSynergyData.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SpreadSynergy.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
