--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Assets\Scripts\Character\SpellQueueSummoner.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\TestingZLegacyExt.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SpreadSynergy.cs" />
     <Compile Include="Assets\RoomController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
     <Compile Include="Assets\Playground.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
     <Compile Include="Assets\Scripts\BoxColliderDebug.cs" />
     <Compile Include="Assets\Scripts\Synergies\SynergyData.cs" />
+    <Compile Include="Assets\Scripts\Synergies\SpreadSynergyData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\Scripts\Ammos\EnemyLaser.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
@@ -242,8 +244,7 @@
     <Compile Include="Assets\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
     <Compile Include="Assets\Scripts\CSVParser\CSVTokenizer.cs" />
     <Compile Include="Assets\Scripts\AugmentHUD.cs" />
-    <Compile Include="Assets\Scripts\Synergies\SpreadSynergyData.cs" />
-    <Compile Include="Assets\Scripts\Synergies\SpreadSynergy.cs" />
+    <Compile Include="Assets\Scripts\SynergySlot.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll" />
